--- a/src/components/infoBlock/InfoBlock.css
+++ b/src/components/infoBlock/InfoBlock.css
@@ -13,6 +13,15 @@
 	height: 80px;
 }
 
+.info-block__user {
+	position: absolute;
+	top: 9px;
+	left: 14px;
+	width: 62px;
+	height: 62px;
+	border-radius: 50px;
+}
+
 .info-block__line {
 	position: absolute;
 	top: 214px;
@@ -32,6 +41,7 @@
 	text-transform: uppercase;
 	color: #EBD8FF;
 }
+
 .info-block__item:not(:last-child){
 	margin-bottom: 16px;
 }
