--- a/src/components/twitCard/TwitCard.css
+++ b/src/components/twitCard/TwitCard.css
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
-	width: 380px;
+	width: 300px;
 	height: 460px;
 	border-radius: 20px;
 	box-shadow: -2.58px 6.87px 20.62px 0px rgba(0, 0, 0, 0.23);
@@ -17,6 +17,18 @@
 
 	background:	url('../../images/background/background.png') center 28px/308px 168px no-repeat,
 	-webkit-linear-gradient(114.99deg, #471CA9 -0.99%, #5736A3 54.28%, #4B2A99 78.99%);
+}
+
+@media screen and (min-width: 768px){
+	.twit-card {
+		width: 360px;
+	}
+}
+
+@media screen and (min-width: 1280px){
+	.twit-card {
+		width: 380px;
+	}
 }
 
 @media (min-device-pixel-ratio: 2),
