--- a/src/components/twitCardList/TwitCardList.css
+++ b/src/components/twitCardList/TwitCardList.css
@@ -1,6 +1,18 @@
 .twit-cards {
 	display: grid;
 	justify-content: center;
-	grid-template-columns: repeat(3, 380px);
+	grid-template-columns: 1rf;
 	grid-gap: 8px;
+}
+
+@media screen and (min-width: 768px){
+	.twit-cards {
+	grid-template-columns: repeat(2, 360px);
+	}
+}
+
+@media screen and (min-width: 1280px){
+	.twit-cards {
+	grid-template-columns: repeat(3, 380px);
+	}
 }
