--- a/src/components/infoBlock/InfoBlock.css
+++ b/src/components/infoBlock/InfoBlock.css
@@ -18,3 +18,9 @@
 .info-block__item:not(:last-child){
 	margin-bottom: 16px;
 }
+
+.info-block__list {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
